syntax = "proto3";

package com.coralogix.permissions.v1;

message UserId {
  string id = 1;
}

message TeamId {
  uint32 id = 1;
}

message UserAccountId {
  uint32 id = 1;
}

message OrganizationId {
  string id = 1;
}

message RoleId {
  uint32 id = 1;
}

message OrgGroupId {
  string id = 1;
}

message TeamGroupId {
  uint32 id = 1;
}

message ScopeId{
  uint32 id = 1;
}

